# nekobox

./: .gitattributes  .gitignore  e2e_test.json  test_request.json
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.cargo/: audit.toml
backend/migrations/: 0001_create_session.sql  0002_add_session_alias.sql  0003_add_emotion_role.sql
backend/src/: lib.rs  main.rs
backend/src/api/: lm_studio.rs  mod.rs
backend/src/api/routes/: mod.rs  msg.rs  sessions.rs
backend/src/core/: config.rs  db.rs  error.rs  mcp.rs  mod.rs  models.rs
backend/tests/: integration_test.rs
config/: app.config
config/characters/: takochan_1.0.0.json  takochan_1.0.0.md
config/image/: README.txt
deploy/: docker-compose.yml  nekobox-backend.service
docs/: api.md  dependencies.html  design.md  metacommand.md  security-report.md
docs/coverage/html/: index.html
docs/coverage/html/coverage/dev/claude/nekobox/nekobox/backend/src/core/: config.rs.html  db.rs.html  error.rs.html  (+1 more)
docs/coverage/html/coverage/dev/claude/nekobox3/nekobox/backend/src/: main.rs.html
frontend/: .gitignore  nekobox.csproj  project.godot
frontend/.godot/: extension_list.cfg
frontend/assets/textures/: app_icon.png.import
frontend/src/Resources/: BlurShader.gdshader
frontend/src/Scenes/: Main.tscn
frontend/src/Scripts/: AppConfig.cs  BackendApiClient.cs  ChatWindow.cs  EmotionHelper.cs  InputPopup.cs  Main.cs
rel_config/character/settings/: みけにゃん_1.0.0.md
scripts_local/: start-all.ps1  start-backend.ps1  start-frontend.ps1
(+8 files in other folders)
