[package]
name = "nekobox-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "nekobox_backend"
path = "src/lib.rs"

[[bin]]
name = "nekobox-backend"
path = "src/main.rs"

[dependencies]
axum              = "0.8"
tokio             = { version = "1", features = ["full"] }
sqlx              = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
# sqlx の sqlite は libsqlite3-sys に依存するため、bundled feature はこちらで有効化する
# bundled: SQLite を C ソースから静的コンパイル（musl ターゲット / system sqlite 不要）
libsqlite3-sys    = { version = "0.30", features = ["bundled"] }
reqwest           = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
uuid              = { version = "1", features = ["v4"] }
dotenvy           = "0.15"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror         = "2"
anyhow            = "1"
chrono            = { version = "0.4", features = ["serde"] }
async-trait       = "0.1"

[dev-dependencies]
mockall    = "0.13"
tokio-test = "0.4"
axum-test  = "19"
tempfile   = "3"
